--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI = "mongodb://127.0.0.1:27017/taskapp"
+MONGODB_URI = "mongodb+srv://fwitech123:Smcoder%40123@cluster0.x8irbb7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT = 5000
