--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,16 @@
     "@react-navigation/native-stack": "^7.3.24",
     "axios": "^1.11.0",
     "expo": "~53.0.20",
+    "expo-random": "^14.0.1",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "expo-auth-session": "~6.2.1",
-    "expo-web-browser": "~14.2.0"
+    "expo-secure-store": "~14.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
